--- a/web/bcfOWL/provenance/provenance-en.html
+++ b/web/bcfOWL/provenance/provenance-en.html
@@ -9,8 +9,7 @@
 <div class="head">
 <h1>Provenance for BCF 2.1 Ontology Description Documentation (http://lbd.arch.rwth-aachen.de/bcf/v2.1)</h1>
 <ul>
-	<li>Ontology created by: Jyrki Oraskari (RWTH)</li>	<li>Ontology contributed to by:  Pasi Paasiala Et al. (buildingSMART)</li>
-<li>http://lbd.arch.rwth-aachen.de/bcf/v2.1 is a specialization of the generic URI http://lbd.arch.rwth-aachen.de/bcf/v2.1</li>
+	<li>Ontology created by: Oliver Schulz, Jyrki Oraskari, Jakob Beetz (RWTH)</li><li>http://lbd.arch.rwth-aachen.de/bcf/v2.1 is a specialization of the generic URI http://lbd.arch.rwth-aachen.de/bcf/v2.1</li>
 <li>The ontology documentation was the result of using the <a href="https://github.com/dgarijo/Widoco">Widoco tool</a> (which itself uses <a href="http://www.essepuntato.it/lode/">LODE</a> for generating the crossreference section).</li>
 <li>The documentation was generated at 3.12.2020</ul>
 </div>
