--- a/web pages/bcfOWL/provenance/provenance-en.html
+++ b/web pages/bcfOWL/provenance/provenance-en.html
@@ -7,10 +7,10 @@
 
 <body>
 <div class="head">
-<h1>Provenance for BIM Collaboration Format Ontology Documentation (http://lbd.arch.rwth-aachen.de/bcfOWL/)</h1>
+<h1>Provenance for BIM Collaboration Format Ontology Documentation (http://lbd.arch.rwth-aachen.de/bcfOWL#)</h1>
 <ul>
-	<li>Ontology created by: Oliver Schulz, Jyrki Oraskari, Jakob Beetz (RWTH)</li><li>http://lbd.arch.rwth-aachen.de/bcfOWL/ is a specialization of the generic URI http://lbd.arch.rwth-aachen.de/bcfOWL/</li>
-<li>http://lbd.arch.rwth-aachen.de/bcfOWL/ is a revision of the previous version None yet</li>
+	<li>Ontology created by: Oliver Schulz, Jyrki Oraskari, Jakob Beetz (RWTH)</li><li>http://lbd.arch.rwth-aachen.de/bcfOWL# is a specialization of the generic URI http://lbd.arch.rwth-aachen.de/bcfOWL#</li>
+<li>http://lbd.arch.rwth-aachen.de/bcfOWL# is a revision of the previous version None yet</li>
 <li>The ontology documentation was the result of using the <a href="https://github.com/dgarijo/Widoco">Widoco tool</a> (which itself uses <a href="http://www.essepuntato.it/lode/">LODE</a> for generating the crossreference section).</li>
 <li>The documentation was generated at 21.4.2021</ul>
 </div>
